[package]
name = "rat"
version = "0.0.2"
authors = ["Lukas Pustina <lukas@pustina.net>"]
description = "REST API tool -- qeuery various REST APIs comfortably"
repository = "https://github.com/lukaspustina/rat "
readme = "README.md"
license = "MIT"
keywords = ["REST", "API", "CenterDevice", "Pocket", "ElasticSearch", "Slack"]
include = [
  "README.md",
  "LICENSE",
  "**/*.rs",
  "Cargo.toml",
]

[[bin]]
name = "rat"
path = "src/main.rs"

[dependencies]
clap = "2"
curl = "0.4"
error-chain = "0.10"
itertools = "0.5"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
serde_urlencoded = "0.4"
toml = "0.3"
webbrowser = "0.2"

