[package]
name = "rat"
version = "0.4.1"
authors = ["Lukas Pustina <lukas@pustina.net>"]
description = "REST API tool -- qeuery various REST APIs comfortably"
repository = "https://github.com/lukaspustina/rat "
readme = "README.md"
license = "MIT"
keywords = ["REST", "API", "CenterDevice", "Pocket", "ElasticSearch", "Slack"]
include = [
  "README.md",
  "LICENSE",
  "**/*.rs",
  "Cargo.toml",
]

[badges]
travis-ci = { repository = "https://travis-ci.org/lukaspustina/rat", branch = "master" }
appveyor = { repository = "https://ci.appveyor.com/project/lukaspustina/rat", branch = "master" }

[[bin]]
name = "rat"
path = "src/main.rs"

[dependencies]
base64 = "~0.4.0"
chrono = "0.3"
clap = "2"
error-chain = "0.10"
humantime = "1.0.0"
hyper = "0.10.5"
hyper-native-tls = "0.2.2"
itertools = "0.5"
mime = "0.2.2"
mime_guess = "1.8"
mime_multipart = "0.5"
rust-crypto = "0.2"
select = "0.4.0"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
serde_urlencoded = "0.4"
toml = "0.3"
term-painter = "0.2"
webbrowser = "0.2"
